Update toml for publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "nfa"
 version = "0.1.0"
+authors = ["Curtis Knudson <stomps.wikis_8t@icloud.com>"]
 edition = "2021"
-
+description = "A small CLI application for taking notes"
+license = "MIT"
+repository = "https://github.com/curtisknudson/nfa"
 [dependencies]
 bincode = "1.3.3"
 clap = { version = "4.5.27", features = ["derive"] }
