--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 description = "A small CLI application for taking notes"
 license = "MIT"
 repository = "https://github.com/curtisknudson/nfa"
+categories = ["command-line-utilities"]
 [dependencies]
 bincode = "1.3.3"
 clap = { version = "4.5.27", features = ["derive"] }
